# kururi-ai

./: .gitignore  AGENTS.md  LICENSE  PLANS.md  README.ja.md  README.md
.github/workflows/: ci-electron.yml  ci.yml
app/: .eslintrc.json  .gitignore  biome.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/runtime/: requirements-runtime.txt
app/scripts/: copy-static.js
app/src/: index.html  main.ts  preload.ts  renderer.ts  runtime.ts  types.d.ts
app/src/renderer/: App.tsx  index.css  index.html
app/src/renderer/components/ui/: badge.tsx  button.tsx  card.tsx  switch.tsx
app/src/renderer/components/utils/: cn.ts
cli/: README.md  constants.py  download_utils.py  main.py  model_loader.py  prediction.py  preprocess.py  pyproject.toml
tests/: test_download_utils.py  test_model_loader.py  test_prediction.py  test_preprocess.py
